...
            styledDiv {
                css {
                    +appContainer
                }

                if (showMainComponent) {
                    initMainComponent("Content")
                } else {
                    styledDiv {
                        css { +preloadComponentCenteredDiv }
                        styledImg {
                            css {+preloadComponentCenteredImage}
                            attrs{
...
