<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

</resources>