...
            clazzActivityChangeDao.insertAsync(currentChange!!)
            view.finish()
        }
    }

    /**
     * Method that gets called when user clicks "Cancel" on the dialog (dismiss)
     */
    fun handleCancelActivityChange() {
        currentChange = null
    }

    /**
...
