appId: com.toughra.ustadmobile
---
#this flow add content that is already added to library by admin as a content block inside course

# edit the course to add blocks
- tapOn:
      id: "floating_action_button"
# Add block button will be only visible after scrolling to down
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
# add existing content
- tapOn: "Add block"
- tapOn: "Content"
- tapOn: "Library"
