appId: com.toughra.ustadmobile

---
# This test tests the adding profile pic to the profile
# Test parameters needs to provide for this test :
 # 1) TESTFILENAME : provide the profile pic file name
 # 2)TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
 # 3) CONTROLSERVER: ${CONTROLSERVER} : provides the test-control-server address
 # 4) TESTSERIAL: ${TESTSERIAL} : provides the device serial number


# clear the downloads
- evalScript: ${http.get(CONTROLSERVER + "cleardownloads?device=" + TESTSERIAL)}

# push the test file to the downloads
- evalScript: ${http.get(CONTROLSERVER + "pushcontent?test-file-name=" + TESTFILENAME +"&device=" + TESTSERIAL)}


- tapOn:
    id: "floating_action_button"
- tapOn: "Add"
- tapOn: "Select picture from files"
- runFlow:
    when:
      visible: "Show roots"
    file: select_picture_from_files.yaml
    env:
      TESTFILENAME: ${TESTFILENAME}
