appId: com.toughra.ustadmobile
env:
  TESTNAME: "002_009_people_add_and_remove_profile_pic"
  TESTRESULTSDIR: "${TESTRESULTSDIR}/002_009_people_add_and_remove_profile_pic"
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}

- runFlow:
    file: "../common/add_profile_pic.yaml"
    env:
      TESTFILENAME: "admin_pic.jpg"
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
- tapOn:
    id: "floating_action_button"
- tapOn: "Add"
- tapOn: "Remove photo"
- tapOn:
    id: "Save"