appId: com.toughra.ustadmobile
---
# this flow to login to app
 # Test parameters needs to provide for this test :
  # 1) USERNAME : provide the user name : 'admin' by default
  # 2) PASSWORD : provide user password : 'testppass' by default

- runFlow:
    when:
      visible: "Sign in another way"
    commands:
      - tapOn: "Cancel"
- tapOn: "Username"
- inputText: ${USERNAME}
- tapOn: "Password"
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn: "LOGIN"
