appId: com.toughra.ustadmobile
---
# this flow to login to app
 # Test parameters needs to provide for this test :
  # 1) USERNAME : provide the user name : 'admin' by default
  # 2) PASSWORD : provide user password : 'testppass' by default
- tapOn: "Username"
- inputText: ${output.adminUsername}
- tapOn: "Password"
- inputText: ${output.adminPassword}
- hideKeyboard
- tapOn: "LOGIN"
