appId: com.toughra.ustadmobile
---
- tapOn: "First names*"
- inputText: ${FIRSTNAME}
- hideKeyboard
- tapOn: "Last name*"
- inputText: ${LASTNAME}
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Gender*"
    direction: DOWN
- tapOn: "Gender*"
- tapOn: ${GENDER}
- tapOn: "Parents' email address"
- inputText: ${PARENTEMAIL}
- hideKeyboard
- tapOn: "Username"
- inputText: ${USERNAME}
- hideKeyboard
- tapOn: "Password"
- inputText: ${PASSWORD}
- tapOn: "Register"
